SERVER-14138 mongos incorrectly targets multiple shards for nested field shard keys